--- a/Digital Piano/MainWindow.xaml
+++ b/Digital Piano/MainWindow.xaml
@@ -5,13 +5,10 @@
          
         Title="Digital Piano"
         WindowState="Maximized"
-        Topmost="True" 
-        Height="1080" 
-        Width="1920"
-        Background="White">
+        Background="#eae1d2">
 
     <Window.Resources>
-
+    
         <Storyboard x:Key="ShowMenuAnimation">
             <DoubleAnimation Storyboard.TargetName="MenuPanel"
                              Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
@@ -38,13 +35,13 @@
 
         <Style x:Key="WhiteKeyStyle" TargetType="Button">
             <Setter Property="Background" Value="White"/>
-            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Foreground" Value="#162812"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="VerticalAlignment" Value="Top"/>
             <Setter Property="Margin" Value="0,200"/>
             <Setter Property="Padding" Value="0,5"/>
             <Setter Property="BorderThickness" Value="2"/>
-            <Setter Property="BorderBrush" Value="#CCCCCC"/>
+            <Setter Property="BorderBrush" Value="#6b7050"/>
             <Setter Property="Height" Value="120"/>
             <Setter Property="Template">
                 <Setter.Value>
@@ -72,13 +69,13 @@
 
         <Style x:Key="BlackKeyStyle" TargetType="Button">
             <Setter Property="Background" Value="Black"/>
-            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Foreground" Value="#eae1d2"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="VerticalAlignment" Value="Top"/>
             <Setter Property="Margin" Value="0,200"/>
             <Setter Property="Padding" Value="0,0"/>
             <Setter Property="BorderThickness" Value="2"/>
-            <Setter Property="BorderBrush" Value="#666666"/>
+            <Setter Property="BorderBrush" Value="#6b7050"/>
             <Setter Property="Height" Value="70"/>
             <Setter Property="Template">
                 <Setter.Value>
@@ -105,21 +102,141 @@
         </Style>
 
         <Style x:Key="SideBarMenuButtonStyle" TargetType="Button">
-            <Setter Property="Background" Value="DarkSlateGray" />
-            <Setter Property="Foreground" Value="White" />
+            <Setter Property="Background" Value="#6b7050" />
+            <Setter Property="Foreground" Value="#eae1d2" />
             <Setter Property="FontSize" Value="20" />
             <Setter Property="FontWeight" Value="Bold" />
-            <Setter Property="BorderBrush" Value="Black" />
-            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="BorderBrush" Value="#162812" />
+            <Setter Property="BorderThickness" Value="4" />
             <Setter Property="HorizontalAlignment" Value="Center" />
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="Margin" Value="0,30" />
+        </Style>
+
+        <Style x:Key="BasicText" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="#162812" />
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
+
+        <Style x:Key="LabelText" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="#eae1d2" />
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
+
+        <Style x:Key="RibbonButtonStyle" TargetType="Button">
+            <Setter Property="Background" Value="#6b7050" />
+            <Setter Property="Foreground" Value="#eae1d2" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="BorderBrush" Value="#162812" />
+            <Setter Property="BorderThickness" Value="0,3,3,3" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="Padding" Value="10,5" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <Border x:Name="border"
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="0,10,10,0"
+                                SnapsToDevicePixels="True">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center" />
+                            </Border>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Trigger.EnterActions>
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetName="border"
+                                                             Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
+                                                             To="10"
+                                                             Duration="0:0:0.2"
+                                                             AutoReverse="True" />
+                                            <DoubleAnimation Storyboard.TargetName="border"
+                                                             Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)"
+                                                             To="2"
+                                                             Duration="0:0:0.2"
+                                                             AutoReverse="True" />
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </Trigger.EnterActions>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="RenderTransform">
+                <Setter.Value>
+                    <TransformGroup>
+                        <TranslateTransform X="0" Y="0" />
+                        <RotateTransform Angle="0" />
+                    </TransformGroup>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="SliderContainerStyle" TargetType="Border">
+            <Setter Property="BorderBrush" Value="#162812"/>
+            <Setter Property="Background" Value="#6b7050"/>
+            <Setter Property="BorderThickness" Value="3"/>
+            <Setter Property="CornerRadius" Value="10"/>
+            <Setter Property="Padding" Value="10"/>
+        </Style>
+
+        <Style x:Key="SliderThumbStyle" TargetType="Thumb">
+            <Setter Property="Width" Value="20"/>
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="Background" Value="#6b7050"/>
+            <Setter Property="BorderBrush" Value="#162812"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="Margin" Value="-10"/>
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="Effect">
+                <Setter.Value>
+                    <DropShadowEffect Color="Black" Direction="270" ShadowDepth="4" Opacity="0.3"/>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Thumb">
+                        <Grid>
+                            <Ellipse Fill="{TemplateBinding Background}"
+                             Stroke="{TemplateBinding BorderBrush}"
+                             StrokeThickness="2"
+                             Width="20"
+                             Height="20"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
 
     </Window.Resources>
 
 
     <Grid>
+
+        <Button x:Name="ToggleMenuButton"
+        Content="НАСТРОЙКИ"
+        FontSize="20"
+        Width="150"
+        Height="50"
+        HorizontalAlignment="Left"
+        VerticalAlignment="Top"
+        Margin="0,10"
+        Style="{StaticResource RibbonButtonStyle}"
+        Click="ToggleMenuButton_Click"
+        Panel.ZIndex="4" />
 
         <Grid x:Name="MainContent">
 
@@ -130,64 +247,60 @@
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
-
                 <StackPanel x:Name="VolumeSliderPanel" Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Left">
-                    <TextBlock x:Name="VolumeLabel"
-                    Text="Volume: 50%"
-                    FontSize="16"
-                    HorizontalAlignment="Center"
-                    Margin="0,0,0,10" />
-                    
-                    <Slider x:Name="VolumeSlider"
-                    Minimum="0"
-                    Maximum="100"
-                    Value="50"
-                    TickFrequency="10"
-                    IsSnapToTickEnabled="True"
-                    AutoToolTipPlacement="TopLeft"
-                    AutoToolTipPrecision="0"
-                    HorizontalAlignment="Center"
-                    Width="300"
-                    Height="30"
-                    ValueChanged="VolumeSlider_ValueChanged">
-                        <Slider.Resources>
-                            <Style TargetType="Thumb">
-                                <Setter Property="Width" Value="15"/>
-                                <Setter Property="Height" Value="15"/>
-                                <Setter Property="Background" Value="DodgerBlue"/>
-                                <Setter Property="BorderBrush" Value="Gray"/>
-                                <Setter Property="BorderThickness" Value="1"/>
-                            </Style>
-                        </Slider.Resources>
+                    <Border Style="{StaticResource SliderContainerStyle}">
+                        <StackPanel>
+                            <TextBlock Text="ГРОМКОСТЬ" Style="{StaticResource LabelText}"/>
 
-                        <Slider.Template>
-                            <ControlTemplate TargetType="Slider">
-                                <Grid>
-                                    <Track Name="PART_Track">
-                                        <Track.DecreaseRepeatButton>
-                                            <RepeatButton Command="Slider.DecreaseLarge" 
-                              Style="{x:Null}" 
-                              IsEnabled="False" 
-                              Height="4" 
-                              Background="LightGray"/>
-                                        </Track.DecreaseRepeatButton>
-                                        <Track.Thumb>
-                                            <Thumb Style="{StaticResource {x:Type Thumb}}"/>
-                                        </Track.Thumb>
-                                        <Track.IncreaseRepeatButton>
-                                            <RepeatButton Command="Slider.IncreaseLarge" 
-                              Style="{x:Null}" 
-                              IsEnabled="False" 
-                              Height="4" 
-                              Background="LightGray"/>
-                                        </Track.IncreaseRepeatButton>
-                                    </Track>
-                                </Grid>
-                            </ControlTemplate>
-                        </Slider.Template>
-                    </Slider>
+                            <Slider x:Name="VolumeSlider"
+                            Minimum="0"
+                            Maximum="100"
+                            Value="50"
+                            TickFrequency="10"
+                            IsSnapToTickEnabled="True"
+                            AutoToolTipPlacement="TopLeft"
+                            AutoToolTipPrecision="0"
+                            HorizontalAlignment="Center"
+                            Width="300"
+                            Height="30"
+                            ValueChanged="VolumeSlider_ValueChanged">
+                                <Slider.Resources>
+                                    <Style TargetType="Thumb" BasedOn="{StaticResource SliderThumbStyle}" />
+                                    <Style TargetType="Border" BasedOn="{StaticResource SliderContainerStyle}" />
+                                </Slider.Resources>
+                                <Slider.Template>
+                                    <ControlTemplate TargetType="Slider">
+                                        <Grid>
+                                            <Track Name="PART_Track">
+                                                <Track.DecreaseRepeatButton>
+                                                    <RepeatButton Command="Slider.DecreaseLarge" 
+                                  Style="{x:Null}" 
+                                  IsEnabled="False" 
+                                  Height="4" 
+                                  Background="#eae1d2"/>
+                                                </Track.DecreaseRepeatButton>
+
+                                                <Track.IncreaseRepeatButton>
+                                                    <RepeatButton Command="Slider.IncreaseLarge" 
+                                  Style="{x:Null}" 
+                                  IsEnabled="False" 
+                                  Height="4" 
+                                  Background="#eae1d2"/>
+                                                </Track.IncreaseRepeatButton>
+
+                                                <!-- Здесь добавьте Track.Thumb, чтобы указать ползунок -->
+                                                <Track.Thumb>
+                                                    <Thumb Style="{StaticResource SliderThumbStyle}" VerticalAlignment="Center" />
+                                                </Track.Thumb>
+                                            </Track>
+                                        </Grid>
+                                    </ControlTemplate>
+                                </Slider.Template>
+                            </Slider>
+                        </StackPanel>
+                    </Border>
                 </StackPanel>
-
+                
             </Grid>
 
             <Grid x:Name="Keys">
@@ -301,57 +414,37 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0">
-                <Border Background="DarkSlateGray" BorderBrush="Black" BorderThickness="1" CornerRadius="0,0,15,15">
-                    <TextBlock Text="РАСШИРЕННЫЕ НАСТРОЙКИ"
-                       HorizontalAlignment="Center"
-                       FontSize="20"
-                       FontWeight="Bold"
-                       Foreground="White"
-                       Margin="30,30" />
+
+            <StackPanel>
+                <Border Background="#eae1d2" BorderBrush="#162812" BorderThickness="0,4,4,4" CornerRadius="0,15,15,0">
+                    <StackPanel Margin="30,30,30,30">
+                        
+                        <TextBlock Text="РАСШИРЕННЫЕ НАСТРОЙКИ" Style="{StaticResource BasicText}"/>
+                        
+                        <Button x:Name="SaveButton"
+                            Content="СОХРАНИТЬ"
+                            Width="150"
+                            Height="50"
+                            Style="{StaticResource SideBarMenuButtonStyle}"
+                            Click="SaveButton_Click">
+                            <Button.Template>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Background="{TemplateBinding Background}"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        CornerRadius="15,15,15,15">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+                        
+                        <TextBlock Text="ПОЛЗУНКИ И КРУТИЛКИ" Style="{StaticResource BasicText}"/>
+                        
+                    </StackPanel>
                 </Border>
-
-                <Button x:Name="SaveButton"
-                Content="СОХРАНИТЬ"
-                Width="150"
-                Height="50"
-                Style="{StaticResource SideBarMenuButtonStyle}"
-                Click="SaveButton_Click">
-                    <Button.Template>
-                        <ControlTemplate TargetType="Button">
-                            <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            CornerRadius="15,15,15,15">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Button.Template>
-                </Button>
             </StackPanel>
-
-            <Border Grid.Row="1"
-            Background="DarkSlateGray"
-            BorderBrush="Black"
-            BorderThickness="1"
-            CornerRadius="15,15,0,0">
-                <TextBlock Text="ПОЛЗУНКИ И КРУТИЛКИ"
-                   HorizontalAlignment="Center"
-                   FontSize="20"
-                   FontWeight="Bold"
-                   Foreground="White"
-                   Margin="0,30" />
-            </Border>
         </Grid>
-        <Button x:Name="ToggleMenuButton"
-                Content="НАСТРОЙКИ"
-                Width="100"
-                Height="30"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Margin="10"
-                Click="ToggleMenuButton_Click"
-                Panel.ZIndex="4" />
 
     </Grid>
 
