--- a/Digital Piano/MainWindow.xaml
+++ b/Digital Piano/MainWindow.xaml
@@ -189,8 +189,17 @@
             <Setter Property="BorderBrush" Value="#162812"/>
             <Setter Property="Background" Value="#6b7050"/>
             <Setter Property="BorderThickness" Value="3"/>
-            <Setter Property="CornerRadius" Value="10"/>
+            <Setter Property="CornerRadius" Value="15"/>
             <Setter Property="Padding" Value="10"/>
+        </Style>
+
+        <Style x:Key="ControlsContainerStyle" TargetType="Border">
+            <Setter Property="BorderBrush" Value="#162812"/>
+            <Setter Property="Background" Value="#6b7050"/>
+            <Setter Property="BorderThickness" Value="3"/>
+            <Setter Property="CornerRadius" Value="10"/>
+            <Setter Property="Padding" Value="20,10,20,10"/>
+            <Setter Property="Margin" Value="0,0,30,0"/>
         </Style>
 
         <Style x:Key="ChangeButtonStyle" TargetType="Button">
@@ -219,7 +228,7 @@
             <Setter Property="Height" Value="20"/>
             <Setter Property="Background" Value="#6b7050"/>
             <Setter Property="BorderBrush" Value="#162812"/>
-            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="BorderThickness" Value="3"/>
             <Setter Property="Margin" Value="-10"/>
             <Setter Property="Cursor" Value="Hand"/>
             <Setter Property="Effect">
@@ -242,6 +251,38 @@
             </Setter>
         </Style>
 
+        <Style x:Key="SwitchStyle" TargetType="ToggleButton">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ToggleButton">
+                        <Grid Width="60" Height="30">
+                            <Border x:Name="SwitchBackground" 
+                                    CornerRadius="15" 
+                                    Background="#eae1d2" 
+                                    BorderBrush="#162812"
+                                    BorderThickness="1"/>
+                            <Ellipse x:Name="SwitchThumb" 
+                                     Width="25" Height="25"
+                                     Fill="#6b7050" 
+                                     Stroke="#162812"
+                                     StrokeThickness="3"
+                                     HorizontalAlignment="Left"
+                                     Margin="2"/>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsChecked" Value="True">
+                                <Setter TargetName="SwitchBackground" Property="Background" Value="LightGreen"/>
+                                <Setter TargetName="SwitchThumb" Property="HorizontalAlignment" Value="Right"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter TargetName="SwitchBackground" Property="Background" Value="#6b7050"/>
+                                <Setter TargetName="SwitchThumb" Property="Fill" Value="#6b7050"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
 
 
@@ -261,18 +302,18 @@
 
         <Grid x:Name="MainContent">
 
-            <Grid x:Name="BasicConrols" Margin="100, 100, 0, 100">
-
+            <Grid x:Name="BasicConrols" Margin="100">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <StackPanel x:Name="VolumeSliderPanel" Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Left">
-                    <Border Style="{StaticResource ContainerStyle}">
+                
+                <StackPanel x:Name="VolumeSliderPanel" Grid.Column="0" VerticalAlignment="Top">
+                    <Border Style="{StaticResource ControlsContainerStyle}">
                         <StackPanel>
                             <TextBlock Text="ГРОМКОСТЬ" Style="{StaticResource LabelText}"/>
-
                             <Slider x:Name="VolumeSlider"
                                 Minimum="0"
                                 Maximum="100"
@@ -282,7 +323,7 @@
                                 AutoToolTipPlacement="TopLeft"
                                 AutoToolTipPrecision="0"
                                 HorizontalAlignment="Center"
-                                Width="300"
+                                Width="150"
                                 Height="30"
                                 ValueChanged="VolumeSlider_ValueChanged">
                                 <Slider.Resources>
@@ -319,8 +360,8 @@
                     </Border>
                 </StackPanel>
 
-                <StackPanel x:Name="SustainSlidePanel" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left">
-                    <Border Style="{StaticResource ContainerStyle}">
+                <StackPanel x:Name="SustainSlidePanel" Grid.Column="1" VerticalAlignment="Top">
+                    <Border Style="{StaticResource ControlsContainerStyle}">
                         <StackPanel>
                             <TextBlock Text="СУСТЕЙН" Style="{StaticResource LabelText}"/>
 
@@ -333,7 +374,7 @@
                                 AutoToolTipPlacement="TopLeft"
                                 AutoToolTipPrecision="0"
                                 HorizontalAlignment="Center"
-                                Width="300"
+                                Width="150"
                                 Height="30"
                                 ValueChanged="SustainSlider_ValueChanged">
                                 <Slider.Resources>
@@ -366,6 +407,24 @@
                                     </ControlTemplate>
                                 </Slider.Template>
                             </Slider>
+                        </StackPanel>
+                    </Border>
+                </StackPanel>
+
+                <StackPanel x:Name="LabelSwitchPanel" Grid.Column="2" VerticalAlignment="Top" Width="200">
+                    <Border Style="{StaticResource ControlsContainerStyle}">
+                        <StackPanel>
+                            <TextBlock Text="НАЗВАНИЯ" Style="{StaticResource LabelText}"/>
+                            <ToggleButton Style="{StaticResource SwitchStyle}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </StackPanel>
+                    </Border>
+                </StackPanel>
+
+                <StackPanel x:Name="MetroSwitchPanel" Grid.Column="3" VerticalAlignment="Top" Width="200">
+                    <Border Style="{StaticResource ControlsContainerStyle}">
+                        <StackPanel>
+                            <TextBlock Text="МЕТРОНОМ" Style="{StaticResource LabelText}"/>
+                            <ToggleButton Style="{StaticResource SwitchStyle}" HorizontalAlignment="Center" VerticalAlignment="Center" />
                         </StackPanel>
                     </Border>
                 </StackPanel>
@@ -518,7 +577,6 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
-
 
                             <TextBlock Grid.Column="0" Grid.Row="0" Text="ЧАСТОТА" Style="{StaticResource BasicText}" HorizontalAlignment="Left"/>
                             <StackPanel Grid.Column="1" Grid.Row="0" x:Name="FreqInputPanel">
